--- a/notebooks/time_series_bangkok_air_quality.ipynb
+++ b/notebooks/time_series_bangkok_air_quality.ipynb
@@ -1991,6 +1991,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "fit() got an unexpected keyword argument 'early_stopping_rounds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[58], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m reg\u001b[39m.\u001b[39;49mfit(X_train, y_train, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfit_params)\n",
+      "\u001b[0;31mTypeError\u001b[0m: fit() got an unexpected keyword argument 'early_stopping_rounds'"
+     ]
+    }
+   ],
+   "source": [
+    "reg.fit(X_train, y_train, **fit_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.predict(X_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize forcast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (16, 9))\n",
+    "\n",
+    "plt.scatter(data.index, data[y_col], s = 4, label = 'actual', color = '.4')\n",
+    "plt.scatter(X_train.index, reg.predict(X_train), alpha = .5, s = 4, label = 'predicted_X_train', color = 'deepskyblue')\n",
+    "plt.scatter(X_test.index, reg.predict(X_test), alpha = .5, s =4, label = 'predicted_X_test', color = 'orange')\n",
+    "plt.ylabel('PM 2.5')\n",
+    "plt.title('Bangkok PM 2.5')\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
