--- a/notebooks/pca_baskin.ipynb
+++ b/notebooks/pca_baskin.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,113 +65,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Mom’s Makin Cookies</td>\n",
-       "      <td>190</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Chocoholic’s Resolution</td>\n",
-       "      <td>190</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>22</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>Wild ‘n Reckless</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>58</th>\n",
+       "      <td>Splish Splash</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>16</td>\n",
        "      <td>12</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Chocolate Chip Cookie Dough</td>\n",
-       "      <td>280</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>23</td>\n",
+       "      <th>55</th>\n",
+       "      <td>Rocky Road</td>\n",
+       "      <td>250</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>Pumpkin Cheesecake</td>\n",
-       "      <td>160</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>Winter White Chocolate</td>\n",
-       "      <td>160</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Nutty Coconut</td>\n",
+       "      <th>15</th>\n",
+       "      <td>Chocolate Hazelnut Truffle</td>\n",
        "      <td>280</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>17</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Peanut Butter ‘n Chocolate</td>\n",
-       "      <td>290</td>\n",
-       "      <td>20.0</td>\n",
+       "      <th>29</th>\n",
+       "      <td>Love Potion #31</td>\n",
+       "      <td>260</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>0.4</td>\n",
+       "      <td>29</td>\n",
        "      <td>24</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>Strawberry Cheesecake</td>\n",
-       "      <td>250</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>28</td>\n",
-       "      <td>22</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Caramel Praline Cheesecake</td>\n",
-       "      <td>170</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>21</td>\n",
-       "      <td>17</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Blue Raspberry Sherbet</td>\n",
+       "      <td>130</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Green Tea</td>\n",
+       "      <td>140</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Praline ‘n Cream</td>\n",
+       "      <td>270</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>32</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Blackberry Frozen Yogurt</td>\n",
+       "      <td>120</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Made with Snickers</td>\n",
+       "      <td>170</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Mango Mania</td>\n",
+       "      <td>130</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -179,32 +179,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Flavour  Calories  Total Fat (g)  Trans Fat (g)  \\\n",
-       "38          Mom’s Makin Cookies       190            9.0            0.2   \n",
-       "10      Chocoholic’s Resolution       190           11.0            0.2   \n",
-       "67             Wild ‘n Reckless        80            1.5            0.0   \n",
-       "13  Chocolate Chip Cookie Dough       280           15.0            0.5   \n",
-       "49           Pumpkin Cheesecake       160            7.0            0.3   \n",
-       "68       Winter White Chocolate       160            8.0            0.2   \n",
-       "39                Nutty Coconut       280           19.0            0.4   \n",
-       "42   Peanut Butter ‘n Chocolate       290           20.0            0.4   \n",
-       "59        Strawberry Cheesecake       250           13.0            0.4   \n",
-       "7    Caramel Praline Cheesecake       170            8.0            0.2   \n",
+       "                       Flavour  Calories  Total Fat (g)  Trans Fat (g)  \\\n",
+       "58               Splish Splash        70            0.5            0.0   \n",
+       "55                  Rocky Road       250           14.0            0.4   \n",
+       "15  Chocolate Hazelnut Truffle       280           17.0            0.4   \n",
+       "29             Love Potion #31       260           14.0            0.4   \n",
+       "4       Blue Raspberry Sherbet       130            2.0            0.1   \n",
+       "26                   Green Tea       140            9.0            0.3   \n",
+       "48            Praline ‘n Cream       270           14.0            0.4   \n",
+       "3     Blackberry Frozen Yogurt       120            4.0            0.1   \n",
+       "31          Made with Snickers       170            9.0            0.3   \n",
+       "32                 Mango Mania       130            6.0            0.2   \n",
        "\n",
        "    Carbohydrates (g)  Sugars (g)  Protein (g)  cluster  \n",
-       "38                 24          18          2.0        0  \n",
-       "10                 22          17          3.0        0  \n",
-       "67                 16          12          1.0        2  \n",
-       "13                 31          23          5.0        1  \n",
-       "49                 21          17          3.0        0  \n",
-       "68                 20          16          2.0        0  \n",
-       "39                 23          17          6.0        1  \n",
-       "42                 24          17          7.0        1  \n",
-       "59                 28          22          4.0        1  \n",
-       "7                  21          17          3.0        0  "
+       "58                 16          12          0.5        2  \n",
+       "55                 29          20          5.0        1  \n",
+       "15                 29          20          5.0        1  \n",
+       "29                 29          24          4.0        1  \n",
+       "4                  26          20          2.0        2  \n",
+       "26                 13          10          3.0        0  \n",
+       "48                 32          26          4.0        1  \n",
+       "3                  17          16          3.0        0  \n",
+       "31                 21          16          3.0        0  \n",
+       "32                 17          14          2.0        0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        " 'Protein (g)']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -338,15 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0z/2gy2pkss67v3rwygb64_tfvm0000gn/T/ipykernel_17152/4105687124.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  dcorr=df[cols].corr()\n"
+      "/var/folders/0z/2gy2pkss67v3rwygb64_tfvm0000gn/T/ipykernel_17479/1183537547.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  dcorr = df[cols].corr()\n"
      ]
     },
     {
@@ -455,7 +455,7 @@
        "Protein (g)          0.285580     1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
