--- a/notebooks/preprocessing_combine_onehot_columns.ipynb
+++ b/notebooks/preprocessing_combine_onehot_columns.ipynb
@@ -556,6 +556,8 @@
     }
    ],
    "source": [
+    "# get data from all row and  column from 'Title' to 'Disney+'\n",
+    "\n",
     "df = df.loc[:, 'Title': 'Disney+']\n",
     "df"
    ]
@@ -746,7 +748,7 @@
     }
    ],
    "source": [
-    "dummy_cols = sorted(['Netflix', 'Hulu', 'Prime Video', 'Disney+'])\n",
+    "dummy_cols = sorted(['Netflix', 'Hulu', 'Prime Video', 'Disney+']) # sort for A to Z\n",
     "dummy_cols"
    ]
   },
@@ -814,7 +816,7 @@
     }
    ],
    "source": [
-    "mlb.classes_"
+    "mlb.classes_ # numpy array ordered by A to Z"
    ]
   },
   {
@@ -839,7 +841,7 @@
     "    [[1, 0, 1, 1],\n",
     "    [1, 1, 1, 1]])\n",
     "\n",
-    "mlb.inverse_transform(g)"
+    "mlb.inverse_transform(g) # get list of Tuple"
    ]
   },
   {
@@ -995,7 +997,7 @@
     }
    ],
    "source": [
-    "df[dummy_cols].to_numpy()[:10]"
+    "df[dummy_cols].to_numpy()[:10] # show 10 rows"
    ]
   },
   {
@@ -1192,7 +1194,7 @@
     }
    ],
    "source": [
-    "df[:10]"
+    "df[:10] # show 10 rows"
    ]
   },
   {
@@ -1221,7 +1223,7 @@
     }
    ],
    "source": [
-    "mlb.inverse_transform(df[dummy_cols].to_numpy())[:10]"
+    "mlb.inverse_transform(df[dummy_cols].to_numpy())[:10] # show 10 rows"
    ]
   },
   {
@@ -1447,9 +1449,9 @@
     }
    ],
    "source": [
-    "# create a new column to store platforms\n",
+    "# create a new column to store platforms using string series before joining data\n",
     "\n",
-    "df['platforms'] = pd.Series(mlb.inverse_transform(df[dummy_cols].to_numpy())).str.join(',')\n",
+    "df['platforms'] = pd.Series(mlb.inverse_transform(df[dummy_cols].to_numpy())).str.join(',') #we can use , or | or etc. to join data\n",
     "df"
    ]
   },
@@ -1680,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1688,16 +1690,18 @@
       "text/plain": [
        "array([[0, 0, 1, 0],\n",
        "       [0, 0, 1, 0],\n",
-       "       [0, 0, 1, 0]])"
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 0],\n",
+       "       [0, 0, 1, 1]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlb.fit_transform(df['platforms'].str.split(','))[:3]"
+    "mlb.fit_transform(df['platforms'].str.split(','))[:5]"
    ]
   },
   {
