--- a/notebooks/preprocessing_combine_onehot_columns.ipynb
+++ b/notebooks/preprocessing_combine_onehot_columns.ipynb
@@ -7,7 +7,7 @@
     "### Preprocessing Data\n",
     "#### Combine One-Hot/Dummy Columns using MultiLabelBinarizer\n",
     "\n",
-    "- Dataset: IMDB_Movie_1000_Data.csv\n",
+    "- Dataset: MoviesOnStreamingPlatforms_updated.csv\n",
     "- Learning Date: 24-Sep-23\n",
     "- Learning from: Prasert Kanawattanachai (CBS)\n",
     "    - Github: https://github.com/prasertcbs/"
