--- a/notebooks/market_basket_analysis.ipynb
+++ b/notebooks/market_basket_analysis.ipynb
@@ -3751,6 +3751,482 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "beer      2\n",
+       "bread     4\n",
+       "butter    3\n",
+       "coke      2\n",
+       "diaper    3\n",
+       "milk      3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basket.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basket.bread.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basket['bread'].sum()/len(basket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "beer      0.4\n",
+       "bread     0.8\n",
+       "butter    0.6\n",
+       "coke      0.4\n",
+       "diaper    0.6\n",
+       "milk      0.6\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "support = basket.sum()/len(basket)\n",
+    "support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bread     0.8\n",
+       "butter    0.6\n",
+       "diaper    0.6\n",
+       "milk      0.6\n",
+       "beer      0.4\n",
+       "coke      0.4\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "support.sort_values(ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>antecedents</th>\n",
+       "      <th>consequents</th>\n",
+       "      <th>antecedent support</th>\n",
+       "      <th>consequent support</th>\n",
+       "      <th>support</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>lift</th>\n",
+       "      <th>leverage</th>\n",
+       "      <th>conviction</th>\n",
+       "      <th>zhangs_metric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(bread)</td>\n",
+       "      <td>(butter)</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>(diaper)</td>\n",
+       "      <td>(milk)</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>(milk)</td>\n",
+       "      <td>(diaper)</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(butter)</td>\n",
+       "      <td>(bread)</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>(beer, diaper)</td>\n",
+       "      <td>(milk)</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>(diaper, coke)</td>\n",
+       "      <td>(bread, milk)</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>(coke, milk)</td>\n",
+       "      <td>(bread, diaper)</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>(bread, diaper)</td>\n",
+       "      <td>(coke, milk)</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>(bread, milk)</td>\n",
+       "      <td>(diaper, coke)</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>(butter)</td>\n",
+       "      <td>(beer, bread, diaper, milk)</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         antecedents                  consequents  ...  conviction  zhangs_metric\n",
+       "0            (bread)                     (butter)  ...         1.6       1.000000\n",
+       "48          (diaper)                       (milk)  ...         inf       1.000000\n",
+       "49            (milk)                     (diaper)  ...         inf       1.000000\n",
+       "1           (butter)                      (bread)  ...         inf       0.500000\n",
+       "58    (beer, diaper)                       (milk)  ...         inf       0.666667\n",
+       "..               ...                          ...  ...         ...            ...\n",
+       "43    (diaper, coke)                (bread, milk)  ...         inf       0.750000\n",
+       "42      (coke, milk)              (bread, diaper)  ...         inf       0.750000\n",
+       "41   (bread, diaper)                 (coke, milk)  ...         1.6       1.000000\n",
+       "40     (bread, milk)               (diaper, coke)  ...         1.6       1.000000\n",
+       "159         (butter)  (beer, bread, diaper, milk)  ...         1.2       1.000000\n",
+       "\n",
+       "[160 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8 0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_a = 'bread'\n",
+    "item_b = 'butter'\n",
+    "\n",
+    "support_a = basket[item_a].sum()/len(basket)\n",
+    "support_b = basket[item_b].sum()/len(basket)\n",
+    "\n",
+    "print(support_a, support_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_and_b = len(basket[(basket[item_a] == 1) & (basket[item_b] == 1)])\n",
+    "a_and_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "support_a_and_b = a_and_b/len(basket)\n",
+    "support_a_and_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7499999999999999"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf_a_to_b = support_a_and_b/support_a\n",
+    "conf_a_to_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf_b_to_a = support_a_and_b/support_b\n",
+    "conf_b_to_a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lift (diaper -> beer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.25"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lift=conf_a_b/support_b\n",
+    "\n",
+    "lift = support_a_and_b / (support_a * support_b)\n",
+    "lift"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
