--- a/notebooks/preprocessing_multipleLabelBinarizer.ipynb
+++ b/notebooks/preprocessing_multipleLabelBinarizer.ipynb
@@ -10,7 +10,7 @@
     "- Dataset: IMDB_Movie_1000_Data.csv\n",
     "- Learning Date: 22-Sep-23\n",
     "- Learning from: Prasert Kanawattanachai (CBS)\n",
-    "    - Github: https://github.com/prasertcbs/\n"
+    "    - Github: https://github.com/prasertcbs/"
    ]
   },
   {
