--- a/notebooks/recursive_feature_elimination_RFE.ipynb
+++ b/notebooks/recursive_feature_elimination_RFE.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unsupervised Learning: Principal Component Analysis\n",
-    "#### PCA: Visualize and classify MNIST handwritten images\n",
+    "### Recursive Feature Elimination (REF)\n",
     "\n",
     "- Dataset: diabets.csv\n",
     "- Learning Date: 13-Sep-23\n",
